kubernetes/todo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo
spec:
  selector:
    app: todo
  ports:
  - port: 80
    targetPort: 80
