kubernetes/todo/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - todo.talos.m1xxos.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: todo
      namespace: todo
      port: 80
